HEADER: Fixed - search alignment & footer social icon color

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,6 +22,11 @@
   height: 30px;
 }
 
+.search-input {
+  height: 39px;
+  width: 190px;
+}
+
 @media screen and (max-width: 992px) {
   .header-wrapper {
     height: 50px;
@@ -81,6 +86,7 @@
 
 .footer-social {
   font-size: 26px;
+  color: grey;
 }
 
 .footer-wrap a {
